# MinishellV2

./: CMakeLists.txt  Makefile  author
include/: builtin.h  ministd.h  parser.h  runtime_loop.h  table.h  vector.h  vm.h
libft/: Makefile  ft_split.c  libft.h
libftprintf/: Makefile
libftprintf/include/: ft_printf.h  printf.h
libftprintf/libft/: libft.h
libftprintf/src/: flag_alternative_bonus.c  flag_always_sign_bonus.c  flag_doprecision.c  flag_formatwidth.c  flag_groupedby1k_bonus.c  flag_leftjustify.c  flag_passedwidth.c  flag_spaced_sign_bonus.c  flag_zeropadding.c  ft_printf.c  handler_char.c  handler_int.c  handler_percent.c  handler_pointer.c  handler_string.c  handler_uint.c  handler_uint_hex.c  handler_uint_hex_upper.c  math.c  number_length.c  putchr.c  putnbr_base.c
src/: main.c
src/builtins/: builtin_cd.c  builtin_echo.c  builtin_env.c  builtin_exit.c  builtin_export.c  builtin_manage.c  builtin_pwd.c  builtin_unset.c
src/parser/: cb_command.c  cb_item.c  cb_line.c  cb_operation.c  evaluate_input.c  expand_line.c  is_control.c  is_escapable.c  is_literal_space.c  is_string_quote.c  not_string_quotes_or_cmd_seperator.c  preprocess_line.c  separate_commands.c  seperate_commands.c  skip_atleast.c  take_char.c  take_number.c  take_while.c
src/runtime_loop/: display_prompt.c  evaluate_input.c  read_char.c  read_line.c  runtime_loop.c  take_input.c
src/std/: ft_perror.c  ft_realloc.c
src/table/: table_destroy.c  table_get.c  table_insert.c  table_new.c  table_remove.c
src/vector/: vector_destroy.c  vector_foreach.c  vector_get.c  vector_getr.c  (+7 more)
(+9 files in other folders)
